# MadRaft

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  test.yml
src/: lib.rs
src/kvraft/: client.rs  msg.rs  server.rs  tester.rs  tests.rs
src/porcupine/: checker.rs  kv.rs  mod.rs  model.rs  utils.rs
src/raft/: raft.rs  tester.rs  tests.rs
src/raft/raft/: msg.rs
src/shard_ctrler/: client.rs  mod.rs  msg.rs  server.rs  tester.rs  tests.rs
src/shardkv/: client.rs  mod.rs  msg.rs  server.rs  tester.rs  tests.rs
