[package]
name = "madraft"
version = "0.1.0"
edition = "2018"
authors = ["Runji Wang <wangrunji0408@163.com>"]
description = "The labs of Raft consensus algorithm on MadSim."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
madsim = { git = "https://github.com/madsys-dev/madsim.git", rev = "daa56e2", features = ["sim"] }
# madsim = { path = "../madsim/madsim", features = ["sim"] }
log = "0.4"
rand = "0.8"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
